syntax = "proto3"; //determino la sintaxis a usar

//configuro las opciones
option java_multiple_files = true;
option java_package = "com.unla.retroshopservicegrpc.grpc";

//defino los servicios

/////virtual wallet
service virtualWalletService{
  rpc findOneById(id) returns (ResponseObjectVirtualWalletData){}
  rpc findVirtualWalletByNumber(number) returns (ResponseObjectVirtualWalletData){}
  rpc createNewVirtualWallet(VirtualWalletRequest) returns (ResponseObjectVirtualWalletData){}
  rpc updateVirtualWallet(DataToUpdateRequest) returns (ResponseObjectVirtualWalletData){}

}

//////USER
service userService{
  rpc findCurrentUser(CurrentUser) returns (ResponseObjectUserData){}
  rpc findUserByUsername(UserToFind) returns (ResponseObjectUserData){}
  rpc createNewUser(UserRequest) returns (ResponseObjectUserData){}
  rpc getList(Empty) returns (ResponseUserList){}
}


////Para virtual wallet
message id{
  int64 id = 1;
}

message number{
  string number = 1;
}

message VirtualWalletRequest{
  string number = 1;
  int64 balance = 2;
  string name = 3;
  string surname = 4;
  string dni = 5;
  string valid_from = 6;
  string valid_until = 7;
}

message DataToUpdateRequest{
  string number = 1;
  bool is_money_income= 2;
  int64 value = 3;
}

message ResponseObjectVirtualWalletData{
  VirtualWalletResponse virtualWalletResponse = 1;
  TransactionMessage description = 2;
}

message VirtualWalletResponse{
  int64 id = 1;
  string number = 2;
  int64 balance = 3;
  string name = 4;
  string surname = 5;
  string dni = 6;
  string valid_from = 7;
  string valid_until = 8;
}

message TransactionMessage{
  string message = 1;
}

////Para user
message Empty {}

message CurrentUser{
  string username = 1;
  string password = 2;
}

message UserToFind{
  string username = 1;
  string password = 2;
  string usernameToFind = 3;
}

message UserRequest{
  string usernameAdmin = 1;
  string passwordAdmin = 2;
  string username = 3;
  string password = 4;
  string name = 5;
  string surname = 6;
  string email = 7;
  int32 dni = 8;
}

message ResponseUserList {
  repeated UserResponse users = 1;
}

message ResponseObjectUserData{
  UserResponse user = 1;
  TransactionMessageUser description = 2;
}

message UserResponse{
  int64 id = 1;
  string username = 2;
  string name = 3;
  string surname = 4;
  int32 dni = 5;
  string email = 6;
  string role = 7;
}

message TransactionMessageUser{
  string message = 1;
}